--- a/packages/react-instantsearch/examples/geo-search/package.json
+++ b/packages/react-instantsearch/examples/geo-search/package.json
@@ -12,8 +12,8 @@
     "qs": "6.5.1",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-instantsearch": "4.2.0",
-    "react-instantsearch-theme-algolia": "4.2.0"
+    "react-instantsearch": "4.3.0-beta.0",
+    "react-instantsearch-theme-algolia": "4.3.0-beta.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +26,9 @@
     "moduleNameMapper": {
       "\\.(css)$": "identity-obj-proxy"
     },
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js"
+    ]
   },
   "main": "index.js",
   "license": "MIT"
