--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -10,8 +10,8 @@
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-instantsearch": "4.2.0",
-    "react-instantsearch-theme-algolia": "4.2.0"
+    "react-instantsearch": "4.3.0-beta.0",
+    "react-instantsearch-theme-algolia": "4.3.0-beta.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +24,9 @@
     "moduleNameMapper": {
       "\\.(css)$": "identity-obj-proxy"
     },
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js"
+    ]
   },
   "license": "MIT"
 }
