--- a/packages/react-instantsearch/examples/next-app/package.json
+++ b/packages/react-instantsearch/examples/next-app/package.json
@@ -16,11 +16,13 @@
     "qs": "6.5.1",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-instantsearch": "4.2.0",
-    "react-instantsearch-theme-algolia": "4.2.0",
+    "react-instantsearch": "4.3.0-beta.0",
+    "react-instantsearch-theme-algolia": "4.3.0-beta.0",
     "style-loader": "0.19.0"
   },
   "jest": {
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js"
+    ]
   }
 }
