--- a/packages/react-instantsearch/examples/react-router-v3/package.json
+++ b/packages/react-instantsearch/examples/react-router-v3/package.json
@@ -12,8 +12,8 @@
     "qs": "6.5.1",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-instantsearch": "4.2.0",
-    "react-instantsearch-theme-algolia": "4.2.0",
+    "react-instantsearch": "4.3.0-beta.0",
+    "react-instantsearch-theme-algolia": "4.3.0-beta.0",
     "react-router": "3.0.5"
   },
   "scripts": {
@@ -27,11 +27,15 @@
     "moduleNameMapper": {
       "\\.(css)$": "identity-obj-proxy"
     },
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js"
+    ]
   },
   "main": "index.js",
   "license": "MIT",
   "renovate": {
-    "ignoreDeps": ["react-router"]
+    "ignoreDeps": [
+      "react-router"
+    ]
   }
 }
