--- a/packages/react-instantsearch/examples/server-side-rendering/package.json
+++ b/packages/react-instantsearch/examples/server-side-rendering/package.json
@@ -30,6 +30,7 @@
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-instantsearch": "4.2.0"
+    "react-instantsearch": "4.3.0-beta.0",
+    "react-instantsearch-theme-algolia": "4.3.0-beta.0"
   }
 }
