--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "8.0.3",
-    "babel-jest": "21.2.0",
     "babel-loader": "7.1.2",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-inline-json-import": "0.2.1",
@@ -78,7 +77,7 @@
     "happo-target-firefox": "5.0.0",
     "happypack": "4.0.0",
     "hasha": "3.0.0",
-    "jest-cli": "21.2.1",
+    "jest": "22.0.3",
     "jsdoc-parse": "1.2.7",
     "json": "9.0.6",
     "jstransformer-markdown-it": "2.0.0",
