chore(renovate): support examples (#2043)
* fix(renovate): include examples

* fix(renovate): ignore react-router for v3

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
     ":automergeMinor",
     ":automergePr"
   ],
+  "ignorePresets": [
+    ":ignoreModulesAndTests"
+  ],
   "packageRules": [
     {
       "packagePatterns": [
@@ -13,6 +16,14 @@
         "devDependencies"
       ],
       "rangeStrategy": "replace"
+    },
+    {
+      "paths": [
+        "examples/react-router-v3"
+      ],
+      "ignoreDeps": [
+        "react-router"
+      ]
     }
   ]
 }
